# backend-ai

./: .env.example  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml  env.production  pyproject.toml  pytest.ini
app/: __init__.py  main.py  models.py  schemas.py
app/api/: answer_notes.py  interview.py  practice.py  questions.py
app/core/: auth.py  config.py  database.py
app/lib/: __init__.py  openrouter.py
tests/: conftest.py  test_ai_integration.py  test_answer_notes.py  test_interview.py  test_questions.py
